[package]
name = "superdev"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] } 
solana-sdk = "1.18"
bs58 = "0.5"
base64 = "0.22"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }
